@@ -1,4 +1,4 @@
-<? 
+<?php 
 /** 
 * XMLToArray Generator Class 
 * @author  :  MA Razzaque Rupom <rupom_315@yahoo.com>, <rupom.bd@gmail.com> 
